objects/SFDC_Expense_Line_Item__c.object
<CustomObject>
    <description>Each line item can be recorded.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>R00N700000029NEyEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline_Ticket_Number__c</fullName>
        <label>Airline Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_by_Card__c</fullName>
        <inlineHelpText>hidden field updated by Workflow rule</inlineHelpText>
        <label>Amount Paid by Card</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_AP_Amount__c</fullName>
        <description>AP Profiles Only – Users read-only</description>
        <label>Approved AP Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Total__c</fullName>
        <formula>Approved_AP_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description/Comment/Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exp_Line_Item__c</fullName>
        <label>Expense Line Item #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditure_Amount__c</fullName>
        <formula>Quantity__c *  Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenditure Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agent Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Change Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas-Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incidentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>per diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Header__c</fullName>
        <label>Expense Report</label>
        <referenceTo>SFDC_Expense_Header__c</referenceTo>
        <relationshipName>R00N700000028GmGEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hotel_Vendor__c</fullName>
        <label>Hotel Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Airline_Vendor__c</fullName>
        <label>If Airline  - Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Air Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AirTran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frontier Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Atlantic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Car_Rental_Vendor__c</fullName>
        <label>If Car Rental – Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Alamo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europcar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hertz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrifty</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Item_Counter__c</fullName>
        <formula>+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager Profiles Only – User read-only</description>
        <label>Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <description>takes the current mileage rate and multiplies it by quantity of miles if mileage is chosen in picklist</description>
        <formula>IF(  ISPICKVAL( Expenditure_Type__c, &quot;Mileage&quot;), 0.505, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_Driven__c</fullName>
        <inlineHelpText>enter the number of miles driven</inlineHelpText>
        <label>Miles Driven</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>R00N700000029NF0EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_by_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>please check this field if the expense was paid by using the VinSolutions Debit Card</inlineHelpText>
        <label>Paid by Company Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>CASE( Expense_Header__r.Paid__c , &quot;YES&quot;, &quot;YES&quot;, &quot;NO&quot;, &quot;NO&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Amount__c</fullName>
        <inlineHelpText>this is the proposed amount that is input prior to the actual expenses</inlineHelpText>
        <label>Proposed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Enter Amount to be reimbursed, if expenditure type is milege, system will autocalcuate the mileage reimbursement based on .505 per mile driven</inlineHelpText>
        <label>Actual Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account_Name__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <inlineHelpText>when a rejected reason is selected the expense requested amount will be zero&apos;d out</inlineHelpText>
        <label>Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Out of Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_Account_Key__c</fullName>
        <formula>Account_Name__r.Id</formula>
        <inlineHelpText>admin field for importing</inlineHelpText>
        <label>SF Account Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Expenditure_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Financed_Approved__c</fullName>
        <inlineHelpText>Date the Proposed Travel Amounts were approved to be billed to Dealer</inlineHelpText>
        <label>Travel Approved (Financed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Proposed__c</fullName>
        <inlineHelpText>dates the Travel was Proposed to the Dealer</inlineHelpText>
        <label>Travel Proposed</label>
        <type>Date</type>
    </fields>
    <label>Expense Line Item</label>
    <nameField>
        <displayFormat>EXP-LN-ITM {0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Airline</fullName>
        <active>false</active>
        <description>you must select the airline</description>
        <errorConditionFormula>IF( ISPICKVAL( Expenditure_Type__c ,&quot;Airfare&quot;), True, false)</errorConditionFormula>
        <errorDisplayField>If_Airline_Vendor__c</errorDisplayField>
        <errorMessage>you must enter the name of the airline used</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Car_Rental</fullName>
        <active>false</active>
        <description>you must select the rental car agency used</description>
        <errorConditionFormula>IF( ISPICKVAL( Expenditure_Type__c ,&quot;Rental Car&quot;), True, false)</errorConditionFormula>
        <errorDisplayField>If_Car_Rental_Vendor__c</errorDisplayField>
        <errorMessage>you must select the rental car agency used</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hotel</fullName>
        <active>false</active>
        <description>if expenditure type is Hotel, please pick the Hotel Vendor</description>
        <errorConditionFormula>IF(  ISPICKVAL( Expenditure_Type__c ,&quot;Hotel&quot;), True, false)</errorConditionFormula>
        <errorDisplayField>Hotel_Vendor__c</errorDisplayField>
        <errorMessage>You must input the Hotel Name</errorMessage>
    </validationRules>
</CustomObject>